--- a/main.html
+++ b/main.html
@@ -1,3 +1,27 @@
-Test
+<!DOCTYPE html>
+<html lang="fr">
+	<head>
+			
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<!-- Facebook Meta tags -->
+		<meta property="og:image" content="http://docteurplume.fr/bundles/docteurplumefront/images/logo.png"/>
+		<meta property="og:title" content="Docteur Plume: 1er site de relecture en ligne"/>
+		<meta property="og:site_name" content="Docteur Plume"/>
+		
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		<script src="../../assets/js/html5shiv.js"></script>
+		<script src="../../assets/js/respond.min.js"></script>
+		<![endif]-->	
+		
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />	
+		<link rel="stylesheet" type="text/css" href="css/global.css') }}" />
+		
+	</head>
+	<body>
+	</body>
+	
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-Hello there
+</html>
