mise en relation avec JQM

--- a/main.html
+++ b/main.html
@@ -18,10 +18,21 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />	
 		<link rel="stylesheet" type="text/css" href="css/global.css') }}" />
 		
-	</head>
-	<body>
-	</body>
+</head>
+<body>
+
+<div>
+	<p>Hello world</p>
+</div>
 	
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	
+	
+	
+	
+	
+	
+
+</body>	
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 </html>
